--- a/src/styles/utilities/_colors.scss
+++ b/src/styles/utilities/_colors.scss
@@ -1,16 +1,18 @@
+// _colors.scss - Color functions and scale generation
 @use "sass:math";
 @use 'sass:color';
 @use 'sass:map';
 @use 'sass:meta';
 @use 'sass:list';
 
-@use './variables' as *;
+@use '../abstracts'  as *;
 
 // Color Validation
 @function is-valid-color($color) {
     @return meta.type-of($color) == 'color';
 }
 
+// Scale Generation Function
 @function create-color-scale($color) {
     $scale: ();
     $stops: (
@@ -25,51 +27,89 @@
       800: 25%,
       900: 15%
     );
-  
-    @each $stop, $mix in $stops {
-      $value: if($stop == 500,
-        $color,
-        if($stop < 500,
-          color.mix(white, $color, $mix),
-          color.mix(black, $color, (100% - $mix))
-        )
-      );
-      $scale: map.set($scale, $stop, $value);
+
+    @each $shade, $lightness in $stops {
+        $adjusted-color: $color;
+        
+        @if $shade < 500 {
+            // Lighter shades: mix with white
+            $mix-percentage: math.div($lightness - 50%, 50%) * 100%;
+            $adjusted-color: color.mix(white, $color, $mix-percentage);
+        } @else if $shade > 500 {
+            // Darker shades: mix with black
+            $mix-percentage: math.div(50% - $lightness, 50%) * 100%;
+            $adjusted-color: color.mix(black, $color, $mix-percentage);
+        }
+        
+        $scale: map.set($scale, $shade, $adjusted-color);
     }
     
     @return $scale;
-  }
+}
 
+// Luminance calculation for contrast
+@function luminance($color) {
+  $red: math.div(color.channel($color, "red"), 255);
+  $green: math.div(color.channel($color, "green"), 255);
+  $blue: math.div(color.channel($color, "blue"), 255);
+    
+    $red: if($red <= 0.03928, math.div($red, 12.92), math.pow((math.div($red + 0.055, 1.055)), 2.4));
+    $green: if($green <= 0.03928, math.div($green, 12.92), math.pow((math.div($green + 0.055, 1.055)), 2.4));
+    $blue: if($blue <= 0.03928, math.div($blue, 12.92), math.pow((math.div($blue + 0.055, 1.055)), 2.4));
+    
+    @return 0.2126 * $red + 0.7152 * $green + 0.0722 * $blue;
+}
 
-// Color Relationship Functions
-@function find-text-color($color) {
-    $luminance: luminance($color);
+// Find appropriate text color for a background
+@function find-text-color($background) {
+    $luminance: luminance($background);
     @return if($luminance > 0.55, #000, #fff);
 }
 
-// Luminance Calculation
-@function luminance($color) {
-    $r: color.red($color) / 255;
-    $g: color.green($color) / 255;
-    $b: color.blue($color) / 255;
-    
-    $r: if($r <= 0.0393, $r / 12.92, pow(($r + 0.055) / 1.055, 2.4));
-    $g: if($g <= 0.0393, $g / 12.92, pow(($g + 0.055) / 1.055, 2.4));
-    $b: if($b <= 0.0393, $b / 12.92, pow(($b + 0.055) / 1.055, 2.4));
-    
-    @return $r * 0.2126 + $g * 0.7152 + $b * 0.0722;
-}
-
-// Context-Aware Colors
+// Adaptive contrast mixin
 @mixin adaptive-contrast($color) {
-    background: $color;
+    background-color: $color;
     color: find-text-color($color);
     
     @media (prefers-contrast: more) {
-        $high-contrast: adjust-contrast($color, 20%);
-        
-        background: $high-contrast;
+        $adjusted: if(color.lightness($color) > 50%, 
+            color.adjust($color, $lightness: -10%), 
+            color.adjust($color, $lightness: 10%));
+        background-color: $adjusted;
+        color: find-text-color($adjusted);
     }
+}
+
+// Generate color scales
+$colors: (
+  'primary': create-color-scale($primary),
+  'secondary': create-color-scale($secondary),
+  'success': create-color-scale($success),
+  'danger': create-color-scale($danger),
+  'warning': create-color-scale($warning),
+  'info': create-color-scale($info)
+);
+
+// Generate scales for primitives
+$colors-primitives: ();
+
+@each $name, $color in $color-primitives {
+    $colors-primitives: map.set($colors-primitives, $name, create-color-scale($color));
+}
+
+// todo: documentation
+@mixin bg($color) {
+    & {
+        background-color: $color;
+    }
+}
+@mixin color($color) {
+    & {
+        color: $color;
+    }
+}
+@mixin gradient($direction, $colors...) {
+    background-image: linear-gradient($direction, $colors);
 }
 
 // Filter Mixins
@@ -79,26 +119,4 @@
 
 @mixin filter($value) {
     filter: $value;
-}
-
-$colors: (
-  'primary': create-color-scale($primary),
-  'secondary': create-color-scale($secondary),
-  'success': create-color-scale($success),
-  'danger': create-color-scale($danger),
-  'warning': create-color-scale($warning),
-  'info': create-color-scale($info)
-); 
-
-// Glass Effect Utilities
-.glass-effect {
-    @include backdrop-filter(blur(10px));
-
-    background-color: rgb(255 255 255 / 10%);
-}
-
-.frosted-glass {
-    @include backdrop-filter(blur(5px) saturate(180%));
-    
-    background-color: rgb(255 255 255 / 80%);
-}
+} 
