--- a/src/styles/utilities/_opacity.scss
+++ b/src/styles/utilities/_opacity.scss
@@ -1,10 +1,8 @@
 // Section: Presentation
 // Module: Opacity
 
-@use 'sass:math';
-@use './variables' as *;
-
-
+@use "sass:math";
+@use "../abstracts" as *;
 
 /**
  * @component Opacity
@@ -75,22 +73,42 @@
 
 // Opacity Utilities
 @each $i in $percentages {
-  .opacity-#{$i} { opacity: math.div($i, 100); }
-  .hover\:opacity-#{$i}:hover { opacity: math.div($i, 100); }
-  .focus\:opacity-#{$i}:focus { opacity: math.div($i, 100); }
-  .active\:opacity-#{$i}:active { opacity: math.div($i, 100); }
-  .group:hover .group-hover\:opacity-#{$i} { opacity: math.div($i, 100); }
+  .opacity-#{$i} {
+    opacity: math.div($i, 100);
+  }
+  .hover\:opacity-#{$i}:hover {
+    opacity: math.div($i, 100);
+  }
+  .focus\:opacity-#{$i}:focus {
+    opacity: math.div($i, 100);
+  }
+  .active\:opacity-#{$i}:active {
+    opacity: math.div($i, 100);
+  }
+  .group:hover .group-hover\:opacity-#{$i} {
+    opacity: math.div($i, 100);
+  }
 }
 
 // Responsive Variants for Opacity
 @each $breakpoint, $width in $breakpoints {
   @media (min-width: #{$width}) {
     @each $i in $percentages {
-      .opacity-#{$i}\@#{$breakpoint} { opacity: math.div($i, 100); }
-      .hover\:opacity-#{$i}\@#{$breakpoint}:hover { opacity: math.div($i, 100); }
-      .focus\:opacity-#{$i}\@#{$breakpoint}:focus { opacity: math.div($i, 100); }
-      .active\:opacity-#{$i}\@#{$breakpoint}:active { opacity: math.div($i, 100); }
-      .group:hover .group-hover\:opacity-#{$i}\@#{$breakpoint} { opacity: math.div($i, 100); }
+      .opacity-#{$i}\@#{$breakpoint} {
+        opacity: math.div($i, 100);
+      }
+      .hover\:opacity-#{$i}\@#{$breakpoint}:hover {
+        opacity: math.div($i, 100);
+      }
+      .focus\:opacity-#{$i}\@#{$breakpoint}:focus {
+        opacity: math.div($i, 100);
+      }
+      .active\:opacity-#{$i}\@#{$breakpoint}:active {
+        opacity: math.div($i, 100);
+      }
+      .group:hover .group-hover\:opacity-#{$i}\@#{$breakpoint} {
+        opacity: math.div($i, 100);
+      }
     }
   }
 }
